<resources>
    <string name="app_name">SomeApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_login">Вход</string>
    <string name="menu_gallery">Погода</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_reg">Регистрация</string>
    <string name="menu_home">Домашняя страница</string>
    <string name="menu_edit">Редактирование</string>
    <string name="hintpass">Введете пароль</string>
    <string name="hintlogin">Введите логин</string>
    <string name="logintext">Войти</string>
    <string name="registertext">Зарегистрироваться</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintStream">Введите поток</string>
    <string name="menu_music">Музыка</string>
    <string name="copy">Copy</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="play_music">Play music</string>
    <string name="pause_music">Pause music</string>
    <string name="cityName">CityName</string>
    <string name="_15_0">15.0</string>
    <string name="description">description</string>
    <string name="weather_icon">weather icon</string>
    <string name="image_generation">Генерация изображений</string>
    <string name="image_prompt_text">Введите подсказку</string>
    <string name="image_generation_button">Сгенерировать</string>
    <string name="image_generation_save_button">Сохранить</string>
    <string name="search">Поиск</string>
    <string name="enter_artist_name">Введите запрос</string>
    <string name="other_category">Разное</string>
    <string name="save_token">Сохранить</string>
    <string name="api_token_text">Введите API токен</string>
    <string name="settings_label">Настройки</string>
    <string name="settings_category">Параметры</string>
    <string name="imagen_enhance">Добавить улучшающие теги</string>
    <string name="logout">Выйти</string>
    <string name="image_description">Введите описание</string>
    <string name="image_select">Выбрать изображение</string>
    <string name="send_image">Отправить</string>
    <string name="image_to_upload">image to upload</string>
    <string name="upload_image">Новый пост</string>
    <string name="stop_music">Stop music</string>
    <string name="music_title">Music Title</string>
    <string name="user_login">user login</string>
    <string name="edit_post">edit post</string>
    <string name="delete_post">delete post\n</string>
    <string name="save_post_changes">Сохранить</string>
    <string name="exit">Отправить комментарий</string>
    <string name="all_posts">Все посты</string>
    <string name="images_category">Изображения</string>
    <string name="change_password">Cменить пароль</string>
    <string name="change_pfp">Сменить фото</string>
    <string name="comment_text">Напишите комментарий</string>
</resources>