<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_menu_edit"
            android:title="@string/menu_edit" />
        <item android:title="@string/images_category">
            <menu>
                <item
                    android:id="@+id/nav_post_image"
                    android:icon="@drawable/baseline_add_to_photos_24"
                    android:title="@string/upload_image" />
                <item
                    android:id="@+id/nav_all_posts"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/all_posts" />
                <item
                    android:id="@+id/nav_imagen"
                    android:icon="@drawable/baseline_art_track_24"
                    android:title="@string/image_generation" />
            </menu>
        </item>
        <item android:title="@string/other_category">
            <menu>
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_menu_weather"
                    android:title="@string/menu_gallery" />
                <item
                    android:id="@+id/nav_music"
                    android:icon="@drawable/baseline_library_music_24"
                    android:title="@string/menu_music" />
            </menu>
        </item>
        <item android:title="@string/settings_category">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/baseline_app_settings_alt_24"
                    android:title="@string/settings_label" />
            </menu>
        </item>
    </group>
</menu>