<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="1dp">

            <ImageView
                android:id="@+id/musicImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/musicTitle"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/music_title" />

            <ImageButton
                android:id="@+id/btnPlay"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/play_music"
                app:srcCompat="@drawable/ic_fun_play" />

            <ImageButton
                android:id="@+id/btnStop"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/stop_music"
                app:srcCompat="@drawable/ic_fun_stop" />

            <ImageButton
                android:id="@+id/btnPause"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/pause_music"
                app:srcCompat="@drawable/ic_fun_pause" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>