<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".image.PostImageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/uploadedImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/image_to_upload"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <EditText
            android:id="@+id/imageDescription"
            android:layout_width="313dp"
            android:layout_height="94dp"
            android:layout_marginTop="64dp"
            android:hint="@string/image_description"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploadedImage" />

        <Button
            android:id="@+id/selectButton"
            android:layout_width="258dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:text="@string/image_select"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generateButton" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="258dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:text="@string/send_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectButton" />

        <Button
            android:id="@+id/generateButton"
            android:layout_width="258dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:visibility="gone"
            android:text="Сгенерировать теги"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>