<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".util.ApiTokenFragment">

    <EditText
        android:id="@+id/apiTokenEditText"
        android:layout_width="341dp"
        android:layout_height="88dp"
        android:layout_marginTop="30dp"
        android:hint="@string/api_token_text"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:text="@string/save_token"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/apiTokenEditText" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteButton" />

    <Button
        android:id="@+id/downloadButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:text="Загрузить модель"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:text="Удалить модель"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
