<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="1dp">

            <ImageView
                android:id="@+id/postImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userImage"
                    android:layout_width="39dp"
                    android:layout_height="65dp"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/userLoginText"
                    android:layout_width="206dp"
                    android:layout_height="65dp"
                    android:textSize="40sp"
                    android:layout_weight="1"
                    android:text="@string/user_login" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnEdit"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/edit_post"
                    app:srcCompat="@drawable/ic_edit" />

                <ImageButton
                    android:id="@+id/btnDelete"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/delete_post"
                    app:srcCompat="@drawable/ic_delete" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>