<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialogs.ShowPostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/uploadedImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_to_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/imageDescriptionView"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_marginTop="60dp"
            android:textAlignment="center"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postDateTextView" />

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="32sp"
            android:hint="@string/comment_text"
            app:layout_constraintTop_toBottomOf="@+id/imageDescriptionView"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="258dp"
            android:layout_height="48dp"
            android:layout_marginTop="56dp"
            android:text="@string/exit"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/commentEditText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/exitButton"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/postDateTextView"
            android:layout_width="237dp"
            android:layout_height="58dp"
            android:layout_marginTop="16dp"
            android:text="Date"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.091"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploadedImage" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>